*gitlab-ci-multi-runner-1.3.1 (26 Jun 2016)

  26 Jun 2016; Manuel Friedli <manuel@fritteli.ch>
  +gitlab-ci-multi-runner-1.3.1.ebuild, -gitlab-ci-multi-runner-1.1.3.ebuild:
  dev-vcs/gitlab-ci-multi-runner:
  Added version 1.3.1 and purged old one

  07 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +ChangeLog:
  Added ChangeLog