@@ -6,7 +6,11 @@ DIST gitlab-ci-multi-runner-1.1.4-x86 32562200 SHA256 4b5cc4a70d7f8fdb5c389c7525
 DIST gitlab-ci-multi-runner-1.3.1-amd64 59026624 SHA256 3a80fefb5bb76e43999d95a44467531b47b30b99385ccb2e67b00279cdab6eb7 SHA512 af62b0e7b76d909bfaaa7ebac385df61ae8ba4ca6e0bd9ad7463f628117f1428160ac1a2aa16834837130edb28a22b2c2e720ee93eb70c1086ce6855127f5767 WHIRLPOOL 140b1aa6bfd6ba45acde7a27b29d0410cbcd3940e37f45de9ab4e5c064ffb4ea73cfe25ae80e30ec6f6cc8733535607c779596e7e56c2412f74c51b3cb9b1328
 DIST gitlab-ci-multi-runner-1.3.1-arm 55880648 SHA256 106a6abb55b055f6f9f7f6ac2f65dd26f440b4afcd000cfc128a10c347c3e95d SHA512 a019c30c390d6da949ada3dccc8de9ed0e8c24fc68abbd2d3fa78fb79055c542d74584bff013a228b9abec6e7e2881f99ad5a94ebc008fb19584f12fc55111af WHIRLPOOL 1f9f1e0e4bbfc1c7a3702e2748868e3a9021e9d1289274b4014dbe6876e379ef12f258cdcc9d85320ef5c2e413d78e6815a41e33b9aad2781fba226a2fcc3b13
 DIST gitlab-ci-multi-runner-1.3.1-x86 56049856 SHA256 3b8df407e0014bf82d7751d0cc6a55c7cf73be224550cdc239aa23b4f053a7f4 SHA512 4635de807a4812bf75396eb3f81f160409b1997931b5601530af794a06914bcbb41d25139bc5899385e16ae7ec2f09387b5973589c7ea66c5df6b4e993050814 WHIRLPOOL fa576629cd700ff7cd9f55c5da4f4dbf24e8188066df78f383be413052462fccc13d5e3b45ff582785052acef2a77ff49f3a9e1f2f1742e6ce98b67274bb03a3
+DIST gitlab-ci-multi-runner-1.3.2-amd64 59026624 SHA256 11a27560c0b52138e1947b25fc02768a493fb6480a9e81f1be9980823767dfc0 SHA512 1f80754c13460ea3c849b91a1e08ca19cc906e96ed2d392a7a5b5ac86596b065ef0969c396b17dede090d00b2d61734db1c997ab6884f2768170bc50a69ff262 WHIRLPOOL c0c48efd7591861a969c3ab0d0c3317eefa8ea9f90d518e3f4698d16df2ab35865fe90320063570c064c9fe553f79a015b22f6ac0202f8b70ea381e4a6e42308
+DIST gitlab-ci-multi-runner-1.3.2-arm 55880656 SHA256 9277c93936071c28853e30c65f1619ad8633636cd33b44d844f564e606f9a816 SHA512 95bf8ba209c137b02fc9d08ffa8222a98d3d9e821360c77cac174b8482dc41f04ea294784b7dc3937515731ad41927f756c448247728582e3782484ffa3015e5 WHIRLPOOL 7ed4df051005b9b77aecdc99753e8a6a63afacbacf57e86431a544ca6fbd0fd9d6acf3c9685d28b6dce6213a235c29c35145833bcd74183e7ce42ac593b7962b
+DIST gitlab-ci-multi-runner-1.3.2-x86 56049864 SHA256 f76eb70b7033f0db62022136e585635e28e8f89bebef327a240f8becb7bd254e SHA512 cf379e9fc3187ce018f23fdc4be0c541e7d0bc9080ba9358beb20b8db9ad0e18926d383f22bbdbbe5345668c84d4005c206568c10a2b255a93d7e6e0735a709e WHIRLPOOL 200ffa04bcf330f0f3f54b7f13639c5b17bd4571b599539ae1f5166a5709f410945b1b33450b87aad666250cfc13a32a1312afa4c6509c906c8e15cd5a579188
 EBUILD gitlab-ci-multi-runner-1.1.4.ebuild 2349 SHA256 6432c48b3a7a36c0b28ccab7fb79382061fa9296df9b6dc9ca32d4caa5f20702 SHA512 2a7674d506e79d8570fa8527dd10b87e775a75b4daf41458bcca28f5ad9863145571d4ebf9d9e0d9df015e48c89a7bd4a05d1bc7928223fdc2b7fd528d5282d8 WHIRLPOOL 6df8346401d631b58a3a6e1ce9f2c0e3e8b871e99880099463dcb9b5639d08b3725c7c83e7f96dfe7e8cba4e60abe77e2afbeb2c7ae8ec13cf02b05d1723fd9f
 EBUILD gitlab-ci-multi-runner-1.3.1.ebuild 2349 SHA256 e08c86353148305b0d0b6e671061ae22bf551b8bdce0902b65112fffb9b35cde SHA512 43c9921253423607a395f943d50c699e33e868aac3c76c06c9d9e3701d97fbf8513d06734eefb826f8a26fa62bd435bd12945dd623af122013edfd6295025185 WHIRLPOOL dec520c11a615649549616dac61335367183f08eec5ec137750d64b8fd47330870370cd5dae50a11244203f8c4ddfdf9ef11ef1e654e6508b999d5db211cfc06
-MISC ChangeLog 331 SHA256 0f33ca60ed9d4f2a56a250a64af5322127784b2233b1118d58365908b4423503 SHA512 53adf761c39c6fd9039c71cf59f9ea8cae0a0701658c2d8f244a57a1eb395c88cfdc87a6b4f90ab012a5ac9b6e08675f57f9aebb93d360bbd0180f6966d2f6e8 WHIRLPOOL 9abeef103adb8b8ec725640208c0d7131db5bcd204da7de154cc3fdcf1f7939be010817a1c8e9ba7ae3899c5338ec05f276d8776fed5c9438e9ce667d856616a
+EBUILD gitlab-ci-multi-runner-1.3.2.ebuild 2349 SHA256 e08c86353148305b0d0b6e671061ae22bf551b8bdce0902b65112fffb9b35cde SHA512 43c9921253423607a395f943d50c699e33e868aac3c76c06c9d9e3701d97fbf8513d06734eefb826f8a26fa62bd435bd12945dd623af122013edfd6295025185 WHIRLPOOL dec520c11a615649549616dac61335367183f08eec5ec137750d64b8fd47330870370cd5dae50a11244203f8c4ddfdf9ef11ef1e654e6508b999d5db211cfc06
+MISC ChangeLog 568 SHA256 9a3476e5b90bd7e8a8a6ad0e3009e8eb3ea9fa5aedb5858fcad5b72df1607ff5 SHA512 3e709080b37f1d014f5f27e0b150a0418e98d6c473500382878fa3dac67b1b969727afa2fb8a44896ce9a57460808611598b77ab9c9b7a135f37a5f645c90a94 WHIRLPOOL 6df59c07af7f11b8475feae33c2b9150fffde873ae082948c3e7900fbd804712e06735c32789e8bf24b6cd0fb5bbd7c7af28f73d991e03057aca2c080a656fa3
 MISC metadata.xml 234 SHA256 f35b97f99a26d73cc441e1d93bfe25aaa4e9f7f6d90c8d05a74f7b7bc5b68472 SHA512 59d8156b3ca3e99c40d5a2a32de7edf2eb53279b2424998862589d6bad77617d23fc852afec0a92f8ac5bb54a88ebc504cc0641029c1936412e90ab03dfdd447 WHIRLPOOL 935a1401910a42f888c991e443a49275ea8b87976c5aa977f670053d97d18754231749749bc92d37d4b5f45ecf65914480942a11b5827b6c08fb24313a428431
