@@ -1,3 +1,10 @@
+*gitlab-ci-multi-runner-1.3.2 (09 Jul 2016)
+
+  09 Jul 2016; Manuel Friedli <manuel@fritteli.ch>
+  +gitlab-ci-multi-runner-1.3.2.ebuild:
+  dev-vcs/gitlab-ci-multi-runner:  added ebuild for version 1.3.2 which contains
+  a bugfix for ARM
+
 *gitlab-ci-multi-runner-1.3.1 (26 Jun 2016)
 
   26 Jun 2016; Manuel Friedli <manuel@fritteli.ch>
